@@ -788,6 +788,9 @@ Release 2.6.0 - UNRELEASED
     YARN-2785. Fixed intermittent TestContainerResourceUsage failure. (Varun Vasudev
     via zjshen)
 
+    YARN-2730. DefaultContainerExecutor runs only one localizer at a time
+    (Siqi Li via jlowe)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
